fixed spacing of title navbars and changed them to be same opacity

--- a/css/report.css
+++ b/css/report.css
@@ -99,3 +99,9 @@ body {
 .row {
 	margin: 0px;
 }
+
+.navbar {
+	border-radius: 0px;
+	margin: 0px;
+	opacity: 0.9;
+}
